--- a/client/components.json
+++ b/client/components.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "new-york",
-
-  "rsc": true,
+  "rsc": false,
   "tsx": false,
   "tailwind": {
     "config": "tailwind.config.js",
@@ -12,7 +11,7 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/src/components",
-    "utils": "@/src/lib/utils"
+    "components": "@/components",
+    "utils": "@/lib/utils"
   }
 }
